Add logo and ajax request to Doorkeeper API

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -1,10 +1,11 @@
 ---
-title: Welcome to Middleman
+title: Hacker News Kansai
 ---
 
-<div class="welcome">
-  <h1>Middleman is Watching</h1>
-  <p class="doc">
-    <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
-  </p><!-- .doc -->
-</div><!-- .welcome -->
+<div class="container">
+  <%= image_tag 'hn-logo.png' %>
+  <h1>Hacker News Kansai</h1>
+  
+  <section id="events">
+  </section>
+</div>
