--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,9 +3,30 @@ title: Hacker News Kansai
 ---
 
 <div class="container">
-  <%= image_tag 'hn-logo.png' %>
-  <h1>Hacker News Kansai</h1>
-  
+
   <section id="events">
+    <div id = "next-event">
+    
+    </div>
+
   </section>
+
+  <section id = "mailing-list">
+  </section>
+
+  <section id = "photos">
+  </section>
+
+  <section id = "videos">
+  </section>
+
+  <section id = "members">
+  </section>
+
+  <section id = "organizers">
+  </section>
+
+  <section id = "social">
+  </section>
+
 </div>
