--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -14,6 +14,10 @@
   </head>
   
   <body class="<%= page_classes %>">
+      <%= image_tag 'hn-logo.png' %>
+      <h1>Hacker News Kansai</h1>
+
     <%= yield %>
+    
   </body>
 </html>
