Add some basic styling to index page

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -3,15 +3,18 @@ title: Hacker News Kansai
 ---
 
 <div class="container">
-
-  <section id="events">
-    <div id = "next-event">
-    
+  <section id = "intro">
+    <div id="logo">
+    <%= image_tag 'hn-logo.png', :width => '300', :class => 'logo'%>
+    <h1>Hacker News Kansai</h1>
     </div>
-
+    <div id= "events">
+      <h2>Next Event</h2>
+      <li id = "event-details"></li>
+    </div>
   </section>
 
-  <section id = "mailing-list">
+  <section id = "about">
   </section>
 
   <section id = "photos">
