Add about section

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -15,6 +15,12 @@ title: Hacker News Kansai
   </section>
 
   <section id = "about">
+    <div id = "about-us">
+      <p>
+        HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
+        Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
+      </p>
+    </div>
   </section>
 
   <section id = "photos">
