Add Youtube videos from HN Kansai channel

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,9 +24,14 @@ title: Hacker News Kansai
   </section>
 
   <section id = "photos">
+    <h2> Photos </h2>
+
   </section>
 
   <section id = "videos">
+    <h2>Videos</h2>
+   <div id="player">
+   </div>
   </section>
 
   <section id = "members">
