--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -9,7 +9,7 @@ section {
   float:left;
   width:100%;
   clear:both;
-
+  padding:20px;
 }
 /* index page */
 
@@ -59,7 +59,6 @@ margin-left:20px;
   list-style-type:none;
 }
 
-
 #events h2{
   text-align:center;
   color: #fff;
@@ -76,6 +75,55 @@ margin-left:20px;
   line-height:1.5em;
   text-align:center;
   margin:auto;
+}
+
+#player {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+    position: relative;
+    padding: 5px;
+    margin:auto;
+
+}
+
+.youtube .carousel {
+  
+    width: 30%;
+    height: 350px;
+    padding:5px;
+    cursor:pointer;
+    background-color:#666;
+    overflow: auto;
+    position: absolute;
+    right: 5%;
+    z-index: 3;
+  
+}
+
+.youtube .thumbnail {
+    margin: 2px 10px 0 2px;
+    width: 100px;
+    border: 1px solid black;
+}
+
+.youtube iframe.player {
+    width: 60%;
+    height: 350px;  
+    overflow: auto;
+    border: 0;
+    padding:5px;
+  
+}
+.yt-descript {
+    color: #333;   
+    display:block;
+    height:100px;
+    margin-left:20px;
+}
+.carItemContain{
+    width:;
+    height:100px;
 }
 
 
