--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -11,6 +11,17 @@ section {
   clear:both;
   padding:20px;
 }
+
+section h2{
+  color: rgba(0, 0, 0, .5);
+  font-weight: bold;
+  font-size: 30px;
+  letter-spacing: -1px;
+  text-transform: uppercase;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, .3);
+  padding: 0;
+  text-align:center;
+}
 /* index page */
 
 #intro{
@@ -37,7 +48,9 @@ margin-left:20px;
 }
 
 #events {
+  text-align: center;
   margin-left:15%;
+  width:40%;
   color: #222;
   padding:5px 30px 30px 30px;
   background-color: rgb(226, 102, 0);
@@ -71,38 +84,38 @@ margin-left:20px;
 
 #about-us {
   width:40%;
-  padding:10px 20px;
+  padding:5px 20px;
   line-height:1.5em;
   text-align:center;
   margin:auto;
 }
 
-#player {
-    width: 100%;
-    height: 400px;
-    overflow: hidden;
-    position: relative;
-    padding: 5px;
-    margin:auto;
 
+/*Videos */
+
+#player {
+  width: 100%;
+  height: 400px;
+  overflow: hidden;
+  position: relative;
+  padding: 5px;
+  margin:auto;
 }
 
 .youtube .carousel {
-  
-    width: 30%;
-    height: 350px;
-    padding:5px;
-    cursor:pointer;
-    background-color:#666;
-    overflow: auto;
-    position: absolute;
-    right: 5%;
-    z-index: 3;
-  
+  width: 30%;
+  height: 350px;
+  padding:5px 10px;
+  cursor:pointer;
+  background: rgba(0, 0, 0, .3);
+  overflow: auto;
+  position: absolute;
+  right: 5%;
+  z-index: 3;
 }
 
 .youtube .thumbnail {
-    margin: 2px 10px 0 2px;
+    margin: 2px 8px 0 2px;
     width: 100px;
     border: 1px solid black;
 }
@@ -116,7 +129,8 @@ margin-left:20px;
   
 }
 .yt-descript {
-    color: #333;   
+    color: rgba(255, 255, 255, .5);  
+    text-shadow: 0px 1px rgba(0,0,0,.7);
     display:block;
     height:100px;
     margin-left:20px;
