Import all Flickr photos via the API

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -24,6 +24,9 @@ title: Hacker News Kansai
 
   <section id = "photos">
     <h2> Photos </h2>
+    <div id = "galleries">
+
+    </div>
 
   </section>
 
