--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -10,8 +10,10 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "HN Kansai" %></title>
     
-    <%= stylesheet_link_tag "normalize", "all" %>
+    <%= stylesheet_link_tag "normalize", "all"%>
+    <%= stylesheet_link_tag "fancybox"%>
     <%= javascript_include_tag  "all" %>
+
 
   </head>
   
