--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -18,9 +18,17 @@ section h2{
   font-size: 30px;
   letter-spacing: -1px;
   text-transform: uppercase;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, .3);
+  text-shadow: 0 1px 0 rgba(255, 255, 255, .2);
   padding: 0;
   text-align:center;
+}
+
+#photos h3{
+  text-align:center;
+  text-transform: uppercase;
+  padding-top: 40px;
+  color: rgba(0, 0, 0, .5);
+  text-shadow: 0 1px 0 rgba(255, 255, 255, .2);
 }
 /* index page */
 
@@ -149,7 +157,7 @@ margin-left:20px;
   display:none;
 }
 
-.photo-set img:nth-of-type(1){
+.fancybox img:nth-of-type(1){
 display:block;
 padding:0 20px;
 
