Refactor Doorkeeper API call and update css

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -40,9 +40,28 @@ title: Hacker News Kansai
   </section>
 
   <section id = "organizers">
+    <h2>Organizers</h2>
+    <div id = "Sacha" class = "organizer">
+      <h3>Sacha Grief </h3>
+    </div>
+
+    <div id = "Raphael" class = "organizer">
+      <h3> Raphael Guyot </h3>
+    </div>
+    
+    <div id ="Paco" class = "organizer">
+      <h3>Francisco "Paco" Alcantara</h3>
+    </div>
+   
   </section>
 
+  <section id = "sponsers">
+
+  </section>
+  
   <section id = "social">
+    <h2>Social</h2>
+
   </section>
 
 </div>
