Add social icons

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -36,7 +36,29 @@ title: Hacker News Kansai
    </div>
   </section>
 
-  <section id = "members">
+   <section id = "social">
+    <h2> Social </h2>
+    <div id="social-links">
+      <span id="twitter" class = "social">
+      <% link_to 'http://twitter.com/hnkansai' do %>
+        <%= image_tag 'twitter.png', :class => 'social-icon'  %>
+      <% end %>
+      </span>
+      <span id= "facebook" class = "social">
+       <% link_to 'http://facebook.com/groups/hnkansai' do %>
+        <%= image_tag 'facebook.png', :class => 'social-icon'  %>
+      <% end %>
+      </span>
+      <span id = "flickr">
+       <% link_to 'http://flickr.com/hnkansai' do %>
+        <%= image_tag 'flickr.png', :class => 'social-icon'  %>
+      <% end %>
+      </span>
+    </div>
+ 
+
+  </div>
+
   </section>
 
   <section id = "organizers">
@@ -56,12 +78,9 @@ title: Hacker News Kansai
   </section>
 
   <section id = "sponsers">
-
+    <h2> Sponsers </h2>
   </section>
-  
-  <section id = "social">
-    <h2>Social</h2>
 
-  </section>
+ 
 
 </div>
