--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -36,8 +36,33 @@ title: Hacker News Kansai
    </div>
   </section>
 
-   <section id = "social">
-    <h2> Social </h2>
+  <section id = "organizers">
+    <h2>Organizers</h2>
+    <div id = "Sacha" class = "organizer">
+      <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
+      <div class = "caption">
+        <h3>Sacha Grief </h3>
+      </div>
+    </div>
+
+    <div id = "Raphael" class = "organizer">
+      <%= image_tag 'raphael.jpg', :class => 'profile-pic'  %>
+     <div class = "caption">
+        <h3>Raphael Guyot </h3>
+      </div>
+    </div>
+    
+    <div id ="Paco" class = "organizer">
+      <%= image_tag 'paco.jpg', :class => 'profile-pic'  %>
+      <div class = "caption">
+        <h3>Francisco 'Paco' Alcantara</h3>
+      </div>
+    </div>
+   
+  </section>
+
+     <section id = "social">
+    <h2> Social Links </h2>
     <div id="social-links">
       <span id="twitter" class = "social">
       <% link_to 'http://twitter.com/hnkansai' do %>
@@ -55,28 +80,9 @@ title: Hacker News Kansai
       <% end %>
       </span>
     </div>
- 
-
   </div>
 
   </section>
-
-  <section id = "organizers">
-    <h2>Organizers</h2>
-    <div id = "Sacha" class = "organizer">
-      <h3>Sacha Grief </h3>
-    </div>
-
-    <div id = "Raphael" class = "organizer">
-      <h3> Raphael Guyot </h3>
-    </div>
-    
-    <div id ="Paco" class = "organizer">
-      <h3>Francisco "Paco" Alcantara</h3>
-    </div>
-   
-  </section>
-
   <section id = "sponsers">
     <h2> Sponsers </h2>
   </section>
