--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -9,7 +9,7 @@ section {
   float:left;
   width:100%;
   clear:both;
-  padding:20px;
+  padding-top:20px;
 }
 
 section h2{
@@ -33,7 +33,7 @@ section h2{
 /* index page */
 
 #intro{
-  padding:20px;
+  
 }
 
 #intro h1 {
@@ -47,8 +47,8 @@ section h2{
   margin: 0; 
 }
 
-.logo{
-margin-left:20px;
+#logo{
+margin-left:40px;
 }
 
 #logo, #events{
@@ -109,7 +109,6 @@ margin-left:20px;
   height: 400px;
   overflow: hidden;
   position: relative;
-  padding: 5px;
   margin:auto;
 }
 
@@ -174,6 +173,46 @@ margin-left:20px;
 
 #social-links span a{
   text-decoration:none;
+}
+
+#organizers{
+ 
+}
+.organizer{
+  float:left;
+  width:33.33%;
+  position:relative;
+  cursor:pointer;
+  overflow:hidden;
+}
+
+.organizer img{
+  width:100%;
+  height:100%;
+  display:block;
+}
+
+.caption {
+  position:absolute;
+  top:0;
+  left:0;
+  display:none;
+  background-color: rgba(0,0,0,.75);  
+  height: 100%;  
+  width: 100%;  
+
+  /* For IE 5-7 */  
+  filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=80);  
+  /* For IE 8 */  
+  -MS-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";  
+  }  
+
+.caption h3 {
+  color:#ddd;
+  text-align:center;
+  text-shadow:1px 1px 1px #222;
+  margin-top:40%;
+  font-size:1.5em;
 }
 
 
