Fix fancybox nav

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -62,7 +62,7 @@ title: Hacker News Kansai
   </section>
 
      <section id = "social">
-    <h2> Social Links </h2>
+    <h2> Social </h2>
     <div id="social-links">
       <span id="twitter" class = "social">
       <% link_to 'http://twitter.com/hnkansai' do %>
