--- a/source/stylesheets/fancybox.css
+++ b/source/stylesheets/fancybox.css
@@ -17,7 +17,6 @@
 	vertical-align: top;
 }
 
-
 .fancybox-wrap {
 	position: absolute;
 	top: 0;
@@ -77,7 +76,7 @@
 }
 
 #fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
-	background-image: url('/images/fancybox_sprite.png');
+	background-image: url('fancybox_sprite.png');
 }
 
 #fancybox-loading {
@@ -95,7 +94,7 @@
 #fancybox-loading div {
 	width: 44px;
 	height: 44px;
-	background: url('/images/fancybox_loading.gif') center center no-repeat;
+	background: url('fancybox_loading.gif') center center no-repeat;
 }
 
 .fancybox-close {
@@ -115,10 +114,9 @@
 	height: 100%;
 	cursor: pointer;
 	text-decoration: none;
-	background: transparent url('/images/blank.gif'); /* helps IE */
+	background: transparent url('blank.gif'); /* helps IE */
 	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	z-index: 8040;
-	width:60px;
 }
 
 .fancybox-prev {
@@ -137,22 +135,17 @@
 	margin-top: -18px;
 	cursor: pointer;
 	z-index: 8040;
-	visibility: visible;
-	opacity: 0.5;
+	visibility: hidden;
 }
 
 .fancybox-prev span {
-	left: -70px;
+	left: 10px;
 	background-position: 0 -36px;
 }
 
 .fancybox-next span {
-	right: -70px;
+	right: 10px;
 	background-position: 0 -72px;
-}
-
-.fancybox-prev span:hover, .fancybox-next span:hover{
-	opacity:.6;
 }
 
 .fancybox-nav:hover span {
@@ -191,7 +184,7 @@
 	overflow: hidden;
 	display: none;
 	z-index: 8010;
-	background: url('/images/fancybox_overlay.png');
+	background: url('fancybox_overlay.png');
 }
 
 .fancybox-overlay-fixed {
@@ -270,12 +263,12 @@
 	   only screen and (min-device-pixel-ratio: 1.5){
 
 	#fancybox-loading, .fancybox-close, .fancybox-prev span, .fancybox-next span {
-		background-image: url('/images/fancybox_sprite@2x.png');
+		background-image: url('fancybox_sprite@2x.png');
 		background-size: 44px 152px; /*The size of the normal image, half the size of the hi-res image*/
 	}
 
 	#fancybox-loading div {
-		background-image: url('/images/fancybox_loading@2x.gif');
+		background-image: url('fancybox_loading@2x.gif');
 		background-size: 24px 24px; /*The size of the normal image, half the size of the hi-res image*/
 	}
 }
