--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -42,12 +42,16 @@ section h2{
   text-transform: uppercase;
   padding: 0;
   margin: 0; 
-  color:rgba(0,0,0,.6);
+  color:rgba(0,0,0,.7);
   text-shadow: 1px 1px 0 rgba(255,255,255,.2);
 }
 
 #logo{
 margin-left:40px;
+}
+
+.logo {
+  margin-left: 25px;
 }
 
 #logo, #events{
@@ -76,7 +80,7 @@ margin-left:40px;
 
 #events li{
   list-style-type:none;
-  padding-bottom:10px;
+  padding-bottom:20px;
 }
 
 #events h2{
@@ -85,11 +89,12 @@ margin-left:40px;
   text-shadow:none;
   text-transform: none;
   letter-spacing:0;
+  margin-bottom:10px;
 }
 
 #about {
   background-color:#fff;
-  margin-top:2em;
+  margin-top:1em;
 }
 
 #about-us {
@@ -103,27 +108,28 @@ margin-left:40px;
 
 /*Videos */
 
+
 #player {
-  width: 100%;
-  height: 400px;
-  overflow: hidden;
+  width:100%;
   position: relative;
   margin:auto;
 }
 
 .youtube .carousel {
-  width: 30%;
-  height: 350px;
-  padding:5px 10px;
   cursor:pointer;
-  overflow: auto;
-  position: absolute;
-  right: 5%;
   z-index: 3;
 }
 
+.carousel-wrap{
+  width:100%;
+  overflow-x:scroll;
+  overflow-y:hidden; 
+}
 .carousel{
+  margin-top:20px;
   border:1px solid #aaa;
+  padding-top:10px;
+
 }
 
 .youtube .thumbnail {
@@ -131,18 +137,29 @@ margin-left:40px;
     width: 100px;
 }
 
-.youtube iframe.player {
-    width: 60%;
-    height: 350px;  
+.thumb-container{
+  width:200px;
+  display:inline-block;
+  vertical-align:top;
+  padding:20px;
+  text-align:center;
+}
+.thumbnail {
+  
+}
+
+.player {
+    display:block;
+    width: 800px;
+    margin:auto;
+    height: 400px;  
     overflow: auto;
     padding:5px;
     border:0;
-  
 }
+
 .yt-descript {
     display:block;
-    height:100px;
-    margin-left:20px;
 }
 .carItemContain{
     width:;
@@ -159,6 +176,10 @@ margin-left:40px;
 #galleries{
   max-width: 1080px;
   margin:auto;
+}
+
+#galleries img{
+  border: 1px solid #333;
 }
 
 /*Social*/
@@ -207,7 +228,7 @@ margin-left:40px;
   }  
 
 .caption h3 {
-  color:#ddd;
+  color:#fff;
   text-align:center;
   text-shadow:1px 1px 1px #222;
   margin-top:40%;
