--- a/source/stylesheets/all.css
+++ b/source/stylesheets/all.css
@@ -19,7 +19,12 @@ section h2{
   letter-spacing: -1px;
   text-transform: uppercase;
   padding: 0;
+  margin-top:2em;
   text-align:center;
+}
+
+#photos h2{
+  margin-bottom:0;
 }
 
 #photos h3{
@@ -66,6 +71,7 @@ margin-left:40px;
   background-color: rgb(226, 102, 0);
   border-radius:5px;
   box-shadow:3px 3px 10px #333;
+  margin-top:5px;
 }
 
 #event-details a{
@@ -89,7 +95,8 @@ margin-left:40px;
   text-shadow:none;
   text-transform: none;
   letter-spacing:0;
-  margin-bottom:10px;
+  margin:20px;
+
 }
 
 #about {
@@ -98,12 +105,15 @@ margin-left:40px;
 }
 
 #about-us {
-  width:40%;
-  padding:5px 20px;
+  width:60%;
   line-height:1.5em;
   text-align:center;
   margin:auto;
+  font-size:1.2em;
+  border-bottom:1px solid #ccc;
+  padding-bottom:5px;
 }
+
 
 
 /*Videos */
