--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -17,7 +17,7 @@ title: Hacker News Kansai
     <div id = "about-us">
       <p>
         HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
-        Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. <br />Come join us!
+        Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
       </p>
     </div>
   </section>
@@ -62,7 +62,6 @@ title: Hacker News Kansai
   </section>
 
      <section id = "social">
-    <h2> Social </h2>
     <div id="social-links">
       <span id="twitter" class = "social">
       <% link_to 'http://twitter.com/hnkansai' do %>
