--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,12 +13,26 @@ title: Hacker News Kansai
     </div>
   </section>
 
-  <section id = "about">
-    <div id = "about-us">
-      <p>
-        HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
-        Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
-      </p>
+  <section id = "welcome">
+    <div id = "about">
+        <p>
+          HNKansai is a meetup based around <%= link_to 'Hacker News', 'http://news.ycombinator.com' %>.
+          Every month, we get together in Kyoto, Osaka, or Kobe to talk about technology, design, games, and startups. Come join us!
+        </p>
+    </div>
+    <div id="newsletter">
+        <p> Subscribe to our newsletter to stay up to date with upcoming events and other news.</p>
+        <!-- Begin MailChimp Signup Form -->
+        <div id="mc_embed_signup">
+        <form action="http://fajitanachos.us6.list-manage.com/subscribe/post?u=2ab6d042c537ad6da617f47a3&amp;id=aefb12e09b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+          <div class="clear">
+            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+          </div>
+        </form>
+        </div>
+        <!--End mc_embed_signup-->
     </div>
   </section>
 
