--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -55,7 +55,8 @@ title: Hacker News Kansai
     <div id = "Sacha" class = "organizer">
       <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
       <div class = "caption">
-        <h3>Sacha Grief </h3>
+        <h3>Sacha Greif </h3>
+        <li><a href="http://sachagreif.com">
       </div>
     </div>
 
