Add boostrap and switch to fixed width.

--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -8,8 +8,11 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js" ></script>
     <link href="http://fonts.googleapis.com/css?family=Bitter:400,700,400italic" rel="stylesheet" type="text/css">
      <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
-    <!-- Use title if it's in the page YAML frontmatter -->
-    <title><%= current_page.data.title || "HN Kansai" %></title>
+     <meta name="viewport" content="width=device-width">
+  
+
+  
+    <title>Hacker News Kansai</title>
     
     <%= stylesheet_link_tag "normalize", "all"%>
     <%= stylesheet_link_tag "fancybox"%>
