Toning down the gallery h3 and more styling

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -32,7 +32,7 @@ title: Hacker News Kansai
                 
                 <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
                 <div class="clear">
-                  <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button">
+                  <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
                 </div>
               </form>
               </div>
