--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -70,7 +70,7 @@ title: Hacker News Kansai
         <%= image_tag 'sacha.jpg', :class => 'profile-pic'  %>
         <div class = "caption">
           <h3>Sacha Greif </h3>
-          <li><a href="http://sachagreif.com">
+          <li><a href="http://sachagreif.com"></a></li>
         </div>
       </span>
 
