Add youtube video description below main video

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -30,7 +30,7 @@ title: Hacker News Kansai
               <div id="mc_embed_signup">
               <form action="http://fajitanachos.us6.list-manage.com/subscribe/post?u=2ab6d042c537ad6da617f47a3&amp;id=aefb12e09b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 
-                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
                 <div class="clear">
                   <input type="submit" value="Sign Up" name="subscribe" id="mc-embedded-subscribe" class="button">
                 </div>
