--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -7,7 +7,15 @@
   margin-left:10px;
 }
 
-
+#intro {
+  background: #3a3531 url('/images/hnk-pattern.png');
+  background-size:88px 100px;
+  border-bottom:1px solid #333;
+  box-shadow: 0px 2px 4px #ccc;
+  webkit-box-shadow: 0px 2px 4px #ccc;
+  moz-box-shadow: 0px 2px 4px #ccc;
+  overflow-y: auto;
+}
 
 #welcome, #photos, #videos, #organizers{
   background-color:#fff;
@@ -17,11 +25,22 @@
   border-bottom:1px solid #ccc;
 }
 
+#videos {
 
+    h3{
+      text-align:center;
+    }
+}
+
+.video-details{
+ width:80%;
+ margin:auto;
+ padding:1em;
+ text-align:center;
+}
 
 body {
-  background: #3a3531 url('/images/hnk-pattern.png');
-  background-size:88px 100px;
+
   font-family: "Bitter", "Arial", sans-serif; 
   color: rgba(0, 0, 0, .7);
 }
