Change organizers section to full width and remove bottom padding

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -63,7 +63,7 @@ title: Hacker News Kansai
   </section>
 
   <section id = "organizers">
-    <div class = "container">
+    <div class = "container-fluid no-padding">
       <div id = "row-fluid">
       <h2>Organizers</h2>
       <span id = "Sacha" class = "organizer">
@@ -89,10 +89,6 @@ title: Hacker News Kansai
       </span>
      </div>
     </div>
-  </section>
-
-  <section id = "footer">
-
   </section>
  
 
