--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -13,7 +13,23 @@ title: Hacker News Kansai
       </div>
     </div>
   </section>
-
+  <section id = "nav">
+         <div id = "navbar" class="navbar navbar-inverse" data-spy="affix">
+            <div class="navbar-inner">
+                <div class="container">
+                    <a class="brand" href="#">HN Kansai</a>
+                    <ul class="nav">
+                        <li class="active"><a href="#">Home</a></li>
+                        <li><a href="#about">About</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                    </ul>
+                <div class="social pull-right">
+                   social icons
+                </div>
+            </div>
+        </div>
+      </div>
+  </section>
   <section id = "welcome">
     <div class = "container">
       <div class = "row-fluid">
