--- a/source/stylesheets/all.scss
+++ b/source/stylesheets/all.scss
@@ -2,7 +2,6 @@
 
 @charset "utf-8";
 
-
 #photos .span4 {
   margin-left:10px;
 }
@@ -10,11 +9,27 @@
 #intro {
   background: #3a3531 url('/images/hnk-pattern.png');
   background-size:88px 100px;
-  border-bottom:1px solid #333;
-  box-shadow: 0px 2px 4px #ccc;
-  webkit-box-shadow: 0px 2px 4px #ccc;
-  moz-box-shadow: 0px 2px 4px #ccc;
-  overflow-y: auto;
+}
+
+#nav {
+  margin:0;
+  padding:0;
+  height:60px;
+
+}
+
+.navbar-inner {
+  border-radius:0;
+}
+
+#navbar.affix {
+    position: fixed;
+    width: 100%;
+    top:0;
+    z-index: 5;
+      border-radius:0;
+  moz-border-radius:0;
+  -webkit-border-radius:0;
 }
 
 #welcome, #photos, #videos, #organizers{
@@ -40,7 +55,6 @@
 }
 
 body {
-
   font-family: "Bitter", "Arial", sans-serif; 
   color: rgba(0, 0, 0, .7);
 }
@@ -55,7 +69,6 @@ section {
       font-weight: bold;
       font-size: 2.5em;
       letter-spacing: -1px;
-      text-transform: uppercase;
       padding: 1em 0 1em 0;
       text-align:center;
       color:rgb(226, 102, 0);
@@ -126,9 +139,9 @@ section {
     img {
       margin-bottom:2em;
       border:1px solid #aaa;
-      box-shadow:0px 0px 6px #999;
-      -webkit-box-shadow:0px 0px 6px #999;
-      -mozkit-box-shadow:0px 0px 6px #999;
+      box-shadow:1px 1px 8px #aaa;
+      -webkit-box-shadow:1px 1px 8px #aaa;
+      -mozkit-box-shadow:1px 1px 8px #aaa;
     }
 }
 /*Videos */
@@ -168,9 +181,9 @@ section {
   padding:20px;
   text-align:center;
     img {
-      box-shadow: 2px 2px 6px #777;
-      -webkit-box-shadow: 2px 2px 6px #777;
-      -moz-box-shadow: 2px 2px 6px #777;
+      box-shadow: 1px 1px 6px #888;
+      -webkit-box-shadow: 1px 1px 6px #888;
+      -moz-box-shadow: 1px 1px 6px #888;
     }
 }
 .thumbnail {
@@ -183,14 +196,13 @@ section {
 
 .player {
     display:block;
-    width: 920px;
-    margin:auto;
+    width: 100%;
     height: 450px;  
     overflow: auto;
     border:1px solid #444;
-    box-shadow: 1px 1px 3px #aaa;
-    -webkit-box-shadow: 1px 1px 3px #aaa;
-    -moz-box-shadow: 1px 1px 3px #aaa;
+    box-shadow: 2px 2px 8px #888;
+    -webkit-box-shadow: 2px 2px 8px #888;
+    -moz-box-shadow: 2px 2px 8px #888
 }
 
 .yt-title {
