Add contact form

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -19,9 +19,9 @@ title: Hacker News Kansai
                 <div class="container">
                     <a class="brand" href="#">HN Kansai</a>
                     <ul class="nav">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#about">About</a></li>
-                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="#photos">Photos</a></li>
+                        <li><a href="#videos">Videos</a></li>
+                        <li><a href="mailto:hnkansai@gmail.com">Contact</a></li>
                     </ul>
                 <div class="social pull-right">
                    social icons
